RESOLVED FIXED173781
Fix typo in WebProcessProxy::topPrivatelyControlledDomainsWithWebsiteData() naming
https://bugs.webkit.org/show_bug.cgi?id=173781
Summary Fix typo in WebProcessProxy::topPrivatelyControlledDomainsWithWebsiteData() n...
Chris Dumez
Reported 2017-06-23 12:35:00 PDT
Fix typo in WebProcessProxy::topPrivatelyControlledDomainsWithWebsiteData() naming.
Attachments
Patch (4.62 KB, patch)
2017-06-23 12:35 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-06-23 12:35:39 PDT
Brent Fulgham
Comment 2 2017-06-23 12:44:23 PDT
Comment on attachment 313733 [details] Patch r=me
WebKit Commit Bot
Comment 3 2017-06-23 13:12:09 PDT
Comment on attachment 313733 [details] Patch Clearing flags on attachment: 313733 Committed r218758: <http://trac.webkit.org/changeset/218758>
WebKit Commit Bot
Comment 4 2017-06-23 13:12:10 PDT
All reviewed patches have been landed. Closing bug.
John Wilander
Comment 5 2017-06-23 13:14:42 PDT
Good catch!
Note You need to log in before you can comment on or make changes to this bug.