Fix typo in WebProcessProxy::topPrivatelyControlledDomainsWithWebsiteData() naming https://bugs.webkit.org/show_bug.cgi?id=173781

Reviewed by Brent Fulgham.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::topPrivatelyControlledDomainsWithWebsiteData):
(WebKit::WebProcessProxy::topPrivatelyControlledDomainsWithWebiteData): Deleted.
* UIProcess/WebProcessProxy.h:
* UIProcess/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::grandfatherExistingWebsiteData):


Canonical link: https://commits.webkit.org/190641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218758 268f45cc-cd09-0410-ab3c-d52691b4dbfc